fix: change background on smaller file

--- a/src/components/ui/wrapper/style.module.scss
+++ b/src/components/ui/wrapper/style.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  background: url('@Assets/img/background.jpg');
+  background: url('@Assets/img/background_sm.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
